[package]
name = "pocket-relay-qos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "tracing"] }
axum-xml-up = "0.1.0"
dotenvy = "0.15.7"
env_logger = "0.10"
log = "0.4"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = "0.4"
