[package]
name = "pocket-relay-qos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "tracing"] }
axum-xml-up = "0.1.0"
bytes = "1.5.0"
dotenvy = "0.15.7"
local-ip-address = "0.5.6"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }

# Logging provider 
[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "file_appender"]
